--- a/.md
+++ b/.md
@@ -1,1 +1,3 @@
 # Chapter 9
+## 9.1
+  Storage: To choose the right storage in cloud computing, it's important to understand that storage is the technology used to retain digital data on a medium, making it a core component in both computers and cloud computing with various options to consider.
