--- a/.md
+++ b/.md
@@ -1,3 +1,35 @@
 # Chapter 9
-## 9.1
   Storage: To choose the right storage in cloud computing, it's important to understand that storage is the technology used to retain digital data on a medium, making it a core component in both computers and cloud computing with various options to consider.
+To choose the right storage in cloud computing, it's important to understand that storage is the technology used to retain digital data on a medium, making it a core component in both computers and cloud computing with various options to consider.
+Storage is a fundamental component in both computers and cloud computing, encompassing various types and functionalities.
+NV memory retains data and settings even when the computer is off, examples include hard drives and flash memory.
+Computing has two main types of storage: temporary (like RAM, which is volatile and loses data when the power is off) and permanent (where you store the operating system, applications, and data files, which are non-volatile and retained even without power).
+Computing has two main types of storage: temporary (like RAM, which is volatile and loses data when the power is off) and permanent (where you store the operating system, applications, and data files, which are non-volatile and retained even without power).
+A Solid State Drive (SSD) is a type of hard drive used for storing various data, including files, operating systems, and software, with a key distinction from traditional Hard Disk Drives (HDDs), summarized in a provided table.
+Optical storage relies on lasers and lights to read and write data, with common standards including CD, DVD, and Blu-ray, each having varying data capacities on discs of the same size.
+A jump drive, also known as a USB flash drive, is a small, portable storage device that connects to a computer through a USB port, and it uses integrated circuit memory chips to store data without any movable parts.
+In business, balancing data accessibility and security involves informed decisions about data management influenced by disaster recovery concepts in traditional and cloud storage infrastructure.
+Disaster recovery is the plan and process for quickly restoring IT infrastructure and systems after a disaster, but it can only start once the disaster has ended, and IT personnel are prepared to begin recovery.
+Fault tolerance is the ability of a system to continue functioning properly even when a critical component fails, achieved by reducing single points of failure and implementing measures like replication, redundancy, and backups.
+Replication in IT involves creating exact duplicates of critical data, systems, and networks, allowing for workload distribution across multiple identical systems and ensuring high fault tolerance, though it can be costly due to the need for multiple identical systems.
+Redundancy in IT means having backup systems to keep a business running temporarily, and data replication requires planning to avoid manual errors.
+In large businesses, a single hard drive is inadequate, so enterprise storage solutions are essential for efficiently managing and storing data, which can be implemented by businesses of any size with the right resources
+RAID, or Redundant Array of Independent Disks, is a method of data replication that ensures data safety by distributing it across multiple redundant drives, commonly used in various computing systems and devices.
+A server is like a mailman that receives and fulfills requests from clients, while a file server specifically provides authorized users access to files on a network, typically within an internal enterprise network for security.
+A Network Attached Storage (NAS) is a network-connected storage device that expands storage capacity and manages file systems for authorized users over the internet, often connected to a home router's USB port for easy access.
+A Storage Area Network (SAN) is a high-speed network that connects to servers using technologies like Fiber Channel or iSCSI, allowing remote systems to access raw block-level storage as if it were locally attached.
+Cloud storage is an Internet-based service offered by cloud computing providers that allows users to store and access data with the advantage of scalability and cost efficiency, utilizing technologies similar to enterprise IT storage solutions.
+Cloud storage is a service provided by third-party vendors that offers data storage over the internet, with vendors managing capacity, security, and accessibility, and often providing additional services for data management and analysis.
+Cloud storage is purchasing data storage from a third-party vendor over the Internet, with the vendor managing capacity and offering extra services for data management and analysis.
+Redundant drives in RAID are a good start, but for true data protection, regular backups are necessary.
+To ensure business continuity in the face of disasters like fires, it's essential to include off-site cloud backups in your backup strategy alongside on-site backups.
+Local backups are quicker for both backup and restore operations due to their proximity, but they pose a higher risk of data loss if the business location is compromised by events like floods or power surges.
+Local backups are faster but riskier, as they are susceptible to complete loss in case of disasters like floods or power surges.
+Cloud storage and backup solutions, including popular services like Google Drive and Dropbox, enable businesses to securely store and access their data remotely, with the added benefit of encrypted transmission for enhanced security.
+On-site backups are physically stored at the business site, providing fast backup and restoration but are vulnerable to theft and disasters, while off-site backups are stored away from the business, offering protection against disasters but slower data restoration depending on internet speed.
+AWS provides a comprehensive range of storage services, including object storage, file storage, and block storage, to help you manage your data effectively and optimize your cloud infrastructure, with a focus on the core storage services in this course.
+Object storage is a data storage architecture designed for managing vast quantities of unstructured data that cannot be easily organized into traditional relational databases.
+Amazon S3 organizes and secures data in buckets associated with AWS Regions, offering redundancy, durability, scalability, and pay-as-you-go billing.
+Amazon S3 Glacier is a highly secure and cost-effective storage service designed for long-term data archiving, offering exceptional durability, compliance features, and analytics capabilities at a very low cost.
+Amazon Elastic File System (Amazon EFS) is a scalable and fully managed file system designed for Linux-based workloads in AWS, offering high throughput and low-latency access for a variety of use cases across multiple regions and Availability Zones.
+The critical difference between block storage and object storage lies in how they handle data updates, where block storage modifies specific blocks for efficiency, while object storage necessitates updating the entire file, impacting throughput, latency, and cost.
